--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+    <title>Culture Peruvian</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 id="header">Odin Recipes</h1>
+    <img src="/recipes/img/chef.jpg" alt="chefcito" width="40%">
+    <h3>A collection of Peruvian culture recipes.</h3>
+    <ul>
+        <li><a href="recipes/ceviche.html">Ceviche</a></li>
+        <li><a href="recipes/mazamorra.html">milky maize pudding</a></li>
+        <li><a href="recipes/mariscos.html">Rice With Seafood</a></li>
+    </ul>
+    <a href="#header">Return to top</a>
+   
 </body>
 </html>
